--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,14 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+default = []
+random = ["rand", "rand_distr"]
+
 [dependencies]
+rand = {version = "0.8", optional = true}
+rand_distr = {version = "0.4", optional = true}
 
 [dev-dependencies]
 gnuplot = "0.0.42"
 assert_approx_eq = "1.1"
-
